<?xml version="1.0"?>
<package format="2">
  <name>radar_converter_node</name>
  <version>0.0.0</version>
  <description>The radar_converter_node package</description>

  <maintainer email="seungjaechoi9@gmail.com">imrl_laptop</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>marine_sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5opengl5-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>


  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>compressed_image_transport</build_export_depend>
  <build_export_depend>marine_sensor_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>marine_sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>



  <export>

  </export>
</package>
